# autopsy

./: .env.example  .gitignore  LICENSE  pyproject.toml  readme.md
autopsy/: __init__.py
autopsy/cache/: __init__.py  embeddings.py
autopsy/cli/: interactive.py  main.py  splash.py
autopsy/detection/: __init__.py  deletions.py  heuristics.py
autopsy/git/: __init__.py  diff.py
autopsy/graph/: __init__.py  builder.py  subgraph.py  traversal.py  visualize.py
autopsy/llm/: __init__.py  client.py  pipeline.py  prompts.py
autopsy/parser/: __init__.py  core.py  extractors.py  languages.py  models.py
autopsy/server/: app.py
demo_project/: admin_api.py  auth.py  database.py  query_builder.py  routes.py  user_service.py
docs/: index.html  presentation-script.md
extension/: package-lock.json  package.json
extension/src/: client.ts  diagnostics.ts  extension.ts  graphPanel.ts  panel.ts
tests/: conftest.py  test_api.py  test_deletions.py  test_graph.py  test_heuristics.py  test_parser.py
