[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopsy"
version = "0.1.0"
description = "Detect vulnerabilities in AI-generated code by reasoning across dependency graphs"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "networkx>=3.2",
    "gitpython>=3.1.40",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
embeddings = [
    "voyageai>=0.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
autopsy = "autopsy.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 100
